--- a/johnny-core/package.json
+++ b/johnny-core/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "cron": "^1.3.0",
     "express": "^4.16.2",
     "wtf_wikipedia": "^2.2.0"
   },
